--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tradutor e Codificador de Código Morse</title>
-    <link rel="stylesheet" href="./src/css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    <title>Codificador e Tradutor de Código Morse</title>
+
+    <!-- Open Graph Meta Tags (Facebook, WhatsApp, etc.) -->
+    <meta
+      property="og:title"
+      content="Codificador e Tradutor de Código Morse"
     />
+    <meta
+      property="og:description"
+      content="Texto e código Morse ao seu alcance. Converta qualquer texto para código Morse e vice-versa!"
+    />
+    <meta property="og:image" content="https://i.imgur.com/vqj6ufL.png" />
+    <meta
+      property="og:url"
+      content="https://brianmunizsilveira.github.io/morse-code/"
+    />
+    <meta property="og:type" content="website" />
+
+    <link rel="stylesheet" href="./src/css/styles.css" />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
   </head>
   <body>
     <div class="container">
