feat: melhorias na Open Graph Meta Tags e adição do Favicon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:description"
-      content="Texto e código Morse ao seu alcance. Converta qualquer texto para código Morse e vice-versa!"
+      content="Converta qualquer texto para código Morse e vice-versa!"
     />
     <meta property="og:image" content="https://i.imgur.com/vqj6ufL.png" />
     <meta
@@ -23,6 +23,10 @@
 
     <link rel="stylesheet" href="./src/css/styles.css" />
     <link rel="stylesheet" href="./src/css/responsive.css" />
+
+    <link rel="shortcut icon" href="./src/img/favicon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="container">
