--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
     />
     <meta property="og:type" content="website" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="./src/css/styles.css" />
     <link rel="stylesheet" href="./src/css/responsive.css" />
 
-    <link rel="shortcut icon" href="./src/img/favicon.webp" type="image/x-icon">
-    <link rel="shortcut icon" href="./src/img/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./src/img/favicon.webp"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="./src/img/favicon.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="./src/img/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container">
