✨ feat: Página sobre a historia do código morse

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         Limpar Histórico
       </button>
     </div>
+    <footer>
+      <p>Saiba mais sobre a <a href="./history.html">História do Código Morse</a></p>
+    </footer>
   </div>
 
   <script type="module" src="./src/js/script.js"></script>
