✨ feat: adiciona novos estilos e texto para a página de historia

--- a/history.html
+++ b/history.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História do Código Morse</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header class="hero">
         <div class="hero-content">
             <h1>História do Código Morse</h1>
-            <p>Um sistema revolucionário que conectou o mundo.</p>
+            <p>Descubra como este sistema transformou a comunicação global, permitindo mensagens rápidas e eficazes em uma era sem internet.</p>
             <a href="#origem" class="btn">Saiba Mais</a>
         </div>
     </header>
@@ -21,8 +24,9 @@
             <div class="container">
                 <h2>Como surgiu o Código Morse</h2>
                 <div class="content">
-                    <p>O Código Morse foi criado em 1837 por Samuel Morse e Alfred Vail, permitindo a comunicação em longas distâncias através de pulsos curtos e longos representados por pontos e traços.</p>
-                    <img src="./src/img/samuel_morse.jpeg" alt="Samuel Morse" class="image">
+                    <p>O Código Morse foi criado em 1837 por Samuel Morse, um pintor e inventor norte-americano, em colaboração com Alfred Vail, seu assistente. Este sistema revolucionário surgiu da necessidade de enviar mensagens em longas distâncias com rapidez e eficiência, utilizando pulsos curtos e longos, representados por pontos e traços, para codificar letras e números. <br>
+                    A primeira demonstração pública do Código Morse ocorreu em 1844, com a famosa mensagem "What hath God wrought?" ("O que Deus fez?") enviada entre Washington D.C. e Baltimore, marcando o início de uma nova era na comunicação.</p>
+                    <img src="src/img/samuel_morse.webp" alt="Samuel Morse" class="image">
                 </div>
             </div>
         </section>
@@ -31,24 +35,9 @@
             <div class="container">
                 <h2>A importância do Código Morse</h2>
                 <div class="content">
-                    <p>Durante o século XIX, o Código Morse foi essencial para a transmissão de informações rápidas, conectando cidades e países.</p>
-                    <video controls class="video">
-                        <source src="./src/img/giphy.webp" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
-                    </video>
-                </div>
-            </div>
-        </section>
-
-        <section id="slider" class="section">
-            <div class="container">
-                <h2>Galeria Visual</h2>
-                <div class="slider">
-                    <div class="slides">
-                        <div class="slide"><img src="images/morse1.jpg" alt="Código Morse 1"></div>
-                        <div class="slide"><img src="images/morse2.jpg" alt="Código Morse 2"></div>
-                        <div class="slide"><img src="images/morse3.jpg" alt="Código Morse 3"></div>
-                    </div>
+                    <img src="./src/img/morse-code.jpg" alt="Código Morse" class="image">
+                    <p>No século XIX, o Código Morse tornou-se um pilar essencial para a comunicação global. Ele foi amplamente utilizado em telégrafos, permitindo a transmissão de mensagens quase instantaneamente entre cidades, países e continentes. Esse avanço acelerou o comércio, melhorou a segurança pública e desempenhou um papel crucial durante conflitos armados, como a Guerra Civil Americana. <br>
+                    Além disso, o Código Morse foi adotado por navios e ferrovias, garantindo maior segurança e coordenação em tempos de emergência, como o famoso chamado "SOS" (salve nossas almas).</p> 
                 </div>
             </div>
         </section>
@@ -57,18 +46,17 @@
             <div class="container">
                 <h2>Impacto Global</h2>
                 <div class="content">
-                    <p>O Código Morse foi responsável por moldar a forma como nos comunicamos globalmente, influenciando tecnologias futuras e deixando um legado duradouro.</p>
-                    <img src="images/global-impact.jpg" alt="Impacto Global" class="image">
+                    <p>O impacto do Código Morse ultrapassou as fronteiras tecnológicas de sua época. Ele estabeleceu as bases para os modernos sistemas de comunicação digital, influenciando a criação de redes de telecomunicações e tecnologias como o rádio e a internet. Mesmo hoje, o Código Morse é lembrado como um marco na história da humanidade e ainda é utilizado em aplicações específicas, como aviação e rádio amador. <br>
+                    Seu legado está na forma como transformou o mundo em uma aldeia global, conectando pessoas e ideias de maneiras antes inimagináveis.</p>
+                    <img src="https://media.istockphoto.com/id/577305064/vector/sos-symbol-in-international-morse-code.jpg?s=612x612&w=0&k=20&c=rWDwCizko-rTdxHGJcdt0xGR6XcOrAowrr_9MWGqTic=" alt="Impacto Global" class="image">
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Explore também o nosso <a href="./index.html" target="_blank">Conversor de Código Morse</a> e veja como traduzir mensagens!</p>
+        <p>Explore também o nosso <a href="./index.html" target="_blank">Conversor de Código Morse</a> e descubra como traduzir mensagens utilizando este sistema histórico e fascinante!</p>
     </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="script.js"></script>
 </body>
+
 </html>
