✨ feat: adiciona OGP + Novos estilos

--- a/history.html
+++ b/history.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://morse-code-flax.vercel.app/history.html">
+    <meta property="og:title" content="História do Código Morse - Da Invenção ao Impacto Global">
+    <meta property="og:description" content="Conheça Samuel Morse e o legado desta invenção revolucionária.">
+    <meta property="og:image" content="https://i.imgur.com/vqj6ufL.png">
+    <meta property="og:image:alt" content="Representação do Código Morse com pontos e traços">
+    <meta property="og:site_name" content="História do Código Morse">
+    <meta property="og:locale" content="pt_BR">
     <title>História do Código Morse</title>
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -48,7 +56,7 @@
                 <div class="content">
                     <p>O impacto do Código Morse ultrapassou as fronteiras tecnológicas de sua época. Ele estabeleceu as bases para os modernos sistemas de comunicação digital, influenciando a criação de redes de telecomunicações e tecnologias como o rádio e a internet. Mesmo hoje, o Código Morse é lembrado como um marco na história da humanidade e ainda é utilizado em aplicações específicas, como aviação e rádio amador. <br>
                     Seu legado está na forma como transformou o mundo em uma aldeia global, conectando pessoas e ideias de maneiras antes inimagináveis.</p>
-                    <img src="https://media.istockphoto.com/id/577305064/vector/sos-symbol-in-international-morse-code.jpg?s=612x612&w=0&k=20&c=rWDwCizko-rTdxHGJcdt0xGR6XcOrAowrr_9MWGqTic=" alt="Impacto Global" class="image">
+                    <img src="./src/img/samuel-morse-giphy.webp" alt="Impacto Global" class="image">
                 </div>
             </div>
         </section>
