--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Codificador e Tradutor de Código Morse" />
   <meta property="og:description" content="Converta qualquer texto para código Morse e vice-versa!" />
   <meta property="og:image" content="https://i.imgur.com/vqj6ufL.png" />
-  <meta property="og:url" content="https://brianmunizsilveira.github.io/morse-code/" />
+  <meta property="og:url" content="https://morse-code-flax.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
